--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -13,9 +13,9 @@
 			<th>E-MAIL</th>
 			<th class="text-center">Ação</th>
 		</tr>	
-		<tr>
-			<td><a>Contato</a></td>
-			<td>cont@empresa.com.br</td>
+		<tr ng-repeat="contato in contatos">
+			<td><a>{{contato.nome}}</a></td>
+			<td>{{contato.email}}</td>
 			<td class="text-center"><button class="btn btn-warning">Remover</button></td>
 		</tr>	
 	</table>
