--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -3,7 +3,7 @@
 </div>
 
 <button class="btn btn-primary" ng-click="incrementa()">Novo</button>
-
+<input type="search" ng-model="filtro" placeholder="parte do nome" />
 <p>Contatos cadastrados: {{total}}</p>
 
 <div class="table-responsive">
@@ -13,7 +13,7 @@
 			<th>E-MAIL</th>
 			<th class="text-center">Ação</th>
 		</tr>	
-		<tr ng-repeat="contato in contatos">
+		<tr ng-repeat="contato in contatos | filter: filtro">
 			<td><a>{{contato.nome}}</a></td>
 			<td>{{contato.email}}</td>
 			<td class="text-center"><button class="btn btn-warning">Remover</button></td>
