--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -16,7 +16,7 @@
 		<tr ng-repeat="contato in contatos | filter: filtro">
 			<td><a>{{contato.nome}}</a></td>
 			<td>{{contato.email}}</td>
-			<td class="text-center"><button class="btn btn-warning">Remover</button></td>
+			<td class="text-center"><button class="btn btn-warning" ng-click="remove(contato)">Remover</button></td>
 		</tr>	
 	</table>
 </div>
