--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -4,7 +4,10 @@
 
 <button class="btn btn-primary" ng-click="incrementa()">Novo</button>
 <input type="search" ng-model="filtro" placeholder="parte do nome" />
-<p>Contatos cadastrados: {{contatos.length}}</p>
+<p ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
+<p class="text-info" ng-hide="contatos.length">
+	Não há contatos cadastrados.
+</p>
 
 <div class="table-responsive">
 	<table class="table table-hover">
