--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -1,7 +1,9 @@
 <div class="jumbotron">
 	<h1 class="text-center">Bem-vindo ao Contatooh</h1>
 </div>
-
+<p ng-show="mensagem.texto">
+	{{mensagem.texto}}
+</p>
 <button class="btn btn-primary" ng-click="incrementa()">Novo</button>
 <input type="search" ng-model="filtro" placeholder="parte do nome" />
 <p ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
