--- a/public/partials/contato.html
+++ b/public/partials/contato.html
@@ -1,1 +1,24 @@
-<h1>Contato</h1>
+<h1 class="text-center">Contato</h1>
+<p ng-show="mensagem.texto">
+	{{mensagem.texto}}
+</p>
+
+<form>
+	<div class="form-group">
+		<label for="nome">Nome completo</label>
+		<input type="text" class="form-control" name="nome" id="nome" required ng-model="contato.nome">
+	</div>
+
+	<div class="form-group">
+		<label for="email">E-mail</label>
+		<div class="input-group">
+			<span class="input-group-addon">@</span>
+			<input type="email" class="form-control" name="email" id="email" placeholder="email@exemplo.com" required ng-model="contato.email">
+		</div>
+	</div>
+
+	<div>
+		<button type="submit" class="btn btn-primary">Salvar</button>
+		<a href="#/" class="btn btn-default">Voltar</a>
+	</div>
+</form>
