--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -19,7 +19,7 @@
 			<th class="text-center">Ação</th>
 		</tr>	
 		<tr ng-repeat="contato in contatos | filter: filtro">
-			<td><a>{{contato.nome}}</a></td>
+			<td><a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a></td>
 			<td>{{contato.email}}</td>
 			<td class="text-center"><button class="btn btn-warning" ng-click="remove(contato)">Remover</button></td>
 		</tr>	
