--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -4,7 +4,7 @@
 <p ng-show="mensagem.texto">
 	{{mensagem.texto}}
 </p>
-<button class="btn btn-primary" ng-click="incrementa()">Novo</button>
+<a ng-href="#/contato" class="btn btn-primary">Novo Contato</a>
 <input type="search" ng-model="filtro" placeholder="parte do nome" />
 <p ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
 <p class="text-info" ng-hide="contatos.length">
