--- a/public/partials/contato.html
+++ b/public/partials/contato.html
@@ -17,6 +17,11 @@
 		</div>
 	</div>
 
+	<div class="form-group">
+		<label for="emergencia">Emergência</label>
+		<select id="emergencia" class="form-control" ng-model="contato.emergencia"></select>
+	</div>
+
 	<div>
 		<button type="submit" class="btn btn-primary">Salvar</button>
 		<a href="#/" class="btn btn-default">Voltar</a>
