--- a/public/partials/contatos.html
+++ b/public/partials/contatos.html
@@ -16,11 +16,13 @@
 		<tr>
 			<th>NOME</th>
 			<th>E-MAIL</th>
+			<th>Emergência</th>
 			<th class="text-center">Ação</th>
 		</tr>	
 		<tr ng-repeat="contato in contatos | filter: filtro">
 			<td><a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a></td>
 			<td>{{contato.email}}</td>
+			<td>{{contato.emergencia.nome}}</td>
 			<td class="text-center"><button class="btn btn-warning" ng-click="remove(contato)">Remover</button></td>
 		</tr>	
 	</table>
